fix type issue , remove verified columns
